# spookipy

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README.org  VERSION  ci_fstcomp.txt  cmc_coder.readme  cmds_python_env.txt  create_ssm_package_doc_index.sh  fstpy_env.txt  make_readme.sh  notebook.ipynb  pixi.toml  plugin_list.txt  pyproject.toml  ruff.toml  setup.py  setup.py.bk  setup.sh  setup_spookipy_test_environment.sh  test123.ipynb  usage_examples.py  vscode.debug  vscode.readme
conda.recipe/: build.sh  meta.yaml  recipe.yaml
doc/: AddElementsByPoint.rst  AddToElements.rst  GeorgeKIndex.rst  GridPointDifference.rst  GridPointDistance.rst  Gridcut.rst  Helicity.rst  Humidex.rst  HumidityRelative.rst  HumiditySpecific.rst  InterpolationHorizontalGrid.rst  InterpolationHorizontalPoint.rst  LICENSE.rst  Makefile  Mask.rst  MinMaxLevelIndex.rst  MultiplyElementBy.rst  OpElementsByColumn.rst  OpElementsByValue.rst  Pressure.rst  SaturationVapourPressure.rst  SetConstantValue.rst  SubtractElementsVertically.rst  Thickness.rst  TimeIntervalDifference.rst  TimeIntervalMinMax.rst  Tutorial.ipynb  VapourPressure.rst  WindModulus.rst  acknowledgements.rst  acknowledgementsrst  addelementsbypoint.rst  addtoelement.rst  addtoelements.rst  applyunary.rst  arithmeticmeanbypoint.rst  cloudfractiondiagnostic.rst  conf.py  configparsingutils.rst  contributing.rst  (+58 more)
doctools/: convert_and_send_to_doc.sh  create_dyn_doc.sh  insert_version.sh  replace_modified_files.sh
livraison/: __init__.py  make_ssm_package.py  plugin_list_operation.yaml  test_ssm_package.py
org/: LICENSE.org  acknowledgements.org  conda_howto.org  contributing.org  ssm.org  (+7 more)
(+1312 files in other folders)
